# clang-tools-extra

./: .gitignore  .travis.yml  appveyor.yml
appveyor/: build.sh
clang-modernize/UseAuto/: UseAutoActions.cpp
clang-modernize/tool/: ClangModernize.cpp
clang-tidy/: CMakeLists.txt  Makefile
clang-tidy-vs/: .gitignore  CMakeLists.txt  source.extension.vsixmanifest.in
clang-tidy-vs/ClangTidy/: ClangTidy.csproj  ClangTidy.vsct  ClangTidyPackage.cs  Guids.cs  Resources.Designer.cs  Resources.resx  Utility.cs  packages.config  source.extension.vsixmanifest
clang-tidy-vs/ClangTidy/ClassifierAndTagger/: Classifier.cs  ClassifierProvider.cs  QuickInfoController.cs  QuickInfoControllerProvider.cs  QuickInfoSource.cs  QuickInfoSourceProvider.cs  ValidationTagger.cs  ValidationTaggerProvider.cs
clang-tidy-vs/ClangTidy/Resources/: VSOutputFilter.yaml
clang-tidy-vs/ClangTidy/ThreadRunner/: BackgroundThreadWorker.cs  ClangTidyRunner.cs  OutputFilterDatabase.cs  ValidationResultFormatter.cs
clang-tidy/abseil/: AbseilMatcher.h  AbseilTidyModule.cpp  CMakeLists.txt  MakeUniqueCheck.cpp  MakeUniqueCheck.h
clang-tidy/btc/: BtcTidyModule.cpp  CABExceptionCheck.cpp  CABExceptionCheck.h  CMakeLists.txt  CallingSfehlerWithStopOnErrorCheck.cpp  CallingSfehlerWithStopOnErrorCheck.h  GlobalVariablesCheck.cpp  GlobalVariablesCheck.h  MultipleParametersOfSameTypeCheck.cpp  MultipleParametersOfSameTypeCheck.h  NoAssignmentToReferenceParameterCheck.cpp  NoAssignmentToReferenceParameterCheck.h  OptionalParameterInVirtualMethodCheck.cpp  OptionalParameterInVirtualMethodCheck.h  SingletonCheck.cpp  SingletonCheck.h  UnmanagedDerivedFromSharableCheck.cpp  UnmanagedDerivedFromSharableCheck.h
clang-tidy/readability/: IdentifierNamingCheck.cpp  IdentifierNamingCheck.h
clang-tidy/tool/: CMakeLists.txt  ClangTidyMain.cpp  run-clang-tidy.py  version.h
clang-tidy/tool/cmake/modules/: GetGitRevisionDescription.cmake  version.cpp.in
docs/: ReleaseNotes.rst
docs/clang-tidy/: index.rst
docs/clang-tidy/checks/: abseil-make-unique.rst  btc-calling-SFehler-with-stop-on-error.rst  btc-global-variables.rst  btc-multiple-parameters-of-same-type.rst  btc-no-assignment-to-reference-parameter.rst  btc-optional-parameter-in-virtual-method.rst  btc-singleton.rst  btc-unmanaged-derived-from-sharable.rst  list.rst
test/clang-modernize/UseAuto/: UnresolvedMemberExpr.cpp
test/clang-tidy/: abseil-make-unique.cpp  btc-calling-SFehler-with-stop-on-error.cpp  btc-global-variables.cpp  btc-multiple-parameters-of-same-type.cpp  btc-no-assignment-to-reference-parameter.cpp  btc-optional-parameter-in-virtual-method.cpp  btc-singleton.cpp  btc-unmanaged-derived-from-sharable.cpp
travis-ci/: restore-mtimes.sh  setup.sh  store-mtimes.sh
unittests/: Makefile
unittests/clang-modernize/: Makefile
